--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,11 @@ header p, #careers p, #publication p{
 .btn.btn-white{
   border: 1px solid #fff;
   color: #fff;
+  transition: all 0.25s;
 }
 .btn.btn-white:hover, .btn.btn-white:active, .btn.btn-white:focus {
   color: #fff;
+  transition: all 0.25s;
   /*background-color: rgba(255, 255, 255, 0.2);*/
 }
 
